increased width to prevent overflow

--- a/src/css/page2.css
+++ b/src/css/page2.css
@@ -101,7 +101,7 @@
     }
     .content{
         padding: 0.01rem 1rem;
-        width: 22rem;
+        width: 23rem;
         margin-right: auto;
     }
     .content--response{
